--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -134,6 +134,10 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   airflow-scheduler:
     <<: *airflow-common
@@ -149,6 +153,10 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   airflow-worker:
     <<: *airflow-common
@@ -172,6 +180,10 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   airflow-triggerer:
     <<: *airflow-common
@@ -187,6 +199,10 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   airflow-init:
     <<: *airflow-common
@@ -251,6 +267,10 @@ services:
     user: "0:0"
     volumes:
       - ${AIRFLOW_PROJ_DIR:-.}:/sources
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   airflow-cli:
     <<: *airflow-common
@@ -264,6 +284,10 @@ services:
       - bash
       - -c
       - airflow
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   # You can enable flower by adding "--profile flower" option e.g. docker-compose --profile flower up
   # or by explicitly targeted on the command line e.g. docker-compose up flower.
@@ -286,6 +310,10 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   s3:
     image: docker.io/bitnami/minio:2024
@@ -295,9 +323,13 @@ services:
     volumes:
       - 'minio_data:/data'
     environment:
-      - MINIO_ROOT_USER=your_username
-      - MINIO_ROOT_PASSWORD=your_pasword
+      - MINIO_ROOT_USER=minio123
+      - MINIO_ROOT_PASSWORD=minio123
       - MINIO_DEFAULT_BUCKETS=database
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   spark:
     image: docker.io/bitnami/spark:3.5
@@ -308,10 +340,13 @@ services:
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
       - SPARK_USER=spark
-      - SPARK_SUBMIT_OPTIONS=--packages io.delta:delta-spark_2.12:3.2.0 , org.apache.hadoop:hadoop-aws:3.3.1
     ports:
       - '8081:8080'
       - '7077:7077'
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
   spark-worker:
     image: docker.io/bitnami/spark:3.5
@@ -319,12 +354,16 @@ services:
       - SPARK_MODE=worker
       - SPARK_MASTER_URL=spark://spark:7077
       - SPARK_WORKER_MEMORY=8G
-      - SPARK_WORKER_CORES=2
+      - SPARK_WORKER_CORES=4
       - SPARK_RPC_AUTHENTICATION_ENABLED=no
       - SPARK_RPC_ENCRYPTION_ENABLED=no
       - SPARK_LOCAL_STORAGE_ENCRYPTION_ENABLED=no
       - SPARK_SSL_ENABLED=no
       - SPARK_USER=spark
+    extra_hosts:
+      -  "host.docker.internal:host-gateway"
+
+
 
 volumes:
   postgres-db-volume:
